# pyproject.toml file specified at the root of the directory

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhyperref"
version = "0.1.0"
authors = [{ name = "Spiony" }]
description = ""
readme = "README.md"
# keywords = ["Forms", "Hyperref"]
classifiers = [
    "Topic :: Scientific",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.10"
dependencies = ["pylatex", "PyPDF2"]
